--- a/cacheshr/Makefile.in
+++ b/cacheshr/Makefile.in
@@ -5,8 +5,8 @@ top_srcdir=@top_srcdir@
 RM=$(top_srcdir)/devscripts/rm_if
 prefix=@prefix@
 exec_prefix=@exec_prefix@
-CFLAGS=@CFLAGS@ @SRBINCLUDE@ -fPIC
-CXXFLAGS=-g -O2 -fPIC @CFLAGS@
+CFLAGS=@CFLAGS@ @SRBINCLUDE@  -fPIC
+CXXFLAGS=-g -O2 -fPIC -I../rtevents @CFLAGS@
 LDFLAGS=@LDFLAGS@
 LIBS=-L@MAKESHLIBDIR@ -lMdsShr -lTreeShr -lTdiShr @LIBS@ @SRBLIB@
 INSTALL=@top_srcdir@/conf/install-sh -c
